--- a/notebooks/qwen2-test.ipynb
+++ b/notebooks/qwen2-test.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "import torch\n",
-    "device = \"mps\" # the device to load the model onto"
+    "\n",
+    "device = \"mps\"  # the device to load the model onto"
    ]
   },
   {
@@ -161,21 +162,17 @@
     "\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "    {\"role\": \"user\", \"content\": prompt}\n",
+    "    {\"role\": \"user\", \"content\": prompt},\n",
     "]\n",
     "text = tokenizer.apply_chat_template(\n",
-    "    messages,\n",
-    "    tokenize=False,\n",
-    "    add_generation_prompt=True\n",
+    "    messages, tokenize=False, add_generation_prompt=True\n",
     ")\n",
     "model_inputs = tokenizer([text], return_tensors=\"pt\").to(device)\n",
     "\n",
-    "generated_ids = model.generate(\n",
-    "    model_inputs.input_ids,\n",
-    "    max_new_tokens=512\n",
-    ")\n",
+    "generated_ids = model.generate(model_inputs.input_ids, max_new_tokens=512)\n",
     "generated_ids = [\n",
-    "    output_ids[len(input_ids):] for input_ids, output_ids in zip(model_inputs.input_ids, generated_ids)\n",
+    "    output_ids[len(input_ids) :]\n",
+    "    for input_ids, output_ids in zip(model_inputs.input_ids, generated_ids)\n",
     "]\n",
     "\n",
     "response = tokenizer.batch_decode(generated_ids, skip_special_tokens=True)[0]"
@@ -304,10 +301,7 @@
     "# )\n",
     "model_inputs = tokenizer([prompt], return_tensors=\"pt\").to(device)\n",
     "\n",
-    "generated_ids = model.generate(\n",
-    "    model_inputs.input_ids,\n",
-    "    max_new_tokens=512\n",
-    ")\n",
+    "generated_ids = model.generate(model_inputs.input_ids, max_new_tokens=512)\n",
     "\n",
     "response_2 = tokenizer.batch_decode(generated_ids, skip_special_tokens=False)[0]\n",
     "\n",
@@ -335,7 +329,7 @@
     "# test_text = 'asdf <|im_end|>'\n",
     "\n",
     "\n",
-    "response_2[:-len('<|im_end|>')]"
+    "response_2[: -len('<|im_end|>')]"
    ]
   },
   {
