fixing RL notebook.

--- a/notebooks/03-reinforcement-learning-from-ai-or-human-feedback.ipynb
+++ b/notebooks/03-reinforcement-learning-from-ai-or-human-feedback.ipynb
@@ -43,6 +43,7 @@
     "\n",
     "from transformers import (\n",
     "    AutoModelForSeq2SeqLM,\n",
+    "    AutoModelForCausalLM,\n",
     "    AutoModelForSequenceClassification,\n",
     "    AutoTokenizer,\n",
     "    pipeline,\n",
@@ -398,15 +399,25 @@
     }
    ],
    "source": [
-    "sft_model = AutoModelForSeq2SeqLM.from_pretrained(\n",
-    "    SFT_PEFT_MERGED_MODEL_PATH, torch_dtype=PRECISION\n",
-    ")\n",
+    "try:\n",
+    "    sft_model = AutoModelForSeq2SeqLM.from_pretrained(\n",
+    "        SFT_PEFT_MERGED_MODEL_PATH,\n",
+    "        torch_dtype=PRECISION,\n",
+    "        device_map=\"auto\",\n",
+    "        # attn_implementation=\"flash_attention_2\",\n",
+    "    )\n",
+    "except ValueError:\n",
+    "    sft_model = AutoModelForCausalLM.from_pretrained(\n",
+    "        SFT_PEFT_MERGED_MODEL_PATH,\n",
+    "        torch_dtype=PRECISION,\n",
+    "        device_map=\"auto\",\n",
+    "#         attn_implementation=\"flash_attention_2\",\n",
+    "    )\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(CHOSEN_MODEL, model_max_length=512)\n",
-    "\n",
-    "sft_model.to(torch.device(DEVICE))\n",
-    "print(\"ok\")\n",
-    "sft_model"
+    "tokenizer = AutoTokenizer.from_pretrained(CHOSEN_MODEL, padding_side='left')\n",
+    "tokenizer.pad_token = (\n",
+    "    tokenizer.pad_token if tokenizer.pad_token is not None else tokenizer.eos_token\n",
+    ")"
    ]
   },
   {
